# OpenGLViewer

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
res/: fragment.glsl  vertex.glsl
src/: main.cpp  shader.cpp  shader.h
